--- a/Sally_Sales_Chrome/popup.html
+++ b/Sally_Sales_Chrome/popup.html
@@ -6,19 +6,24 @@
   <link href="css/font-awesome.min.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Roboto:200" rel="stylesheet">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
+  <script type="text/javascript" src="js/jquery-3.3.1.js"></script>
+  <script type="text/javascript" src="js/popup.js"></script>
+  <script type="text/javascript" src="cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js">
+
+  </script>
 </head>
 
 <!---START BODY--->
 
 <body class="iframe-state panel-hidden">
-
+  <!-- Back Button -->
+  <span id="sidebar-arrow" class="panel__icon panel__icon_opened">
+    <img id="icon-arrow-sidebar" src="/img/icon-sidebar.svg" alt="">
+  </span>
+  <!-- Start SIDE PANEL --->
   <div class="panel">
-    <span id="sidebar-arrow" class="panel__icon panel__icon_opened">
-      <img id`"icon-arrow-sidebar" src="/img/icon-sidebar.svg" alt="">
-    </span>
-
     <!-- START 1st VIEW: START SCREEN  -->
-    <div id="start-screen" class="panel-main content-block_invisible">
+    <div id="start-screen" class="panel-main">
       <!-- big logo -->
       <div class="logo-wrapper">
         <img id="start-screen-logo" src="/img/logo-star.png" alt="">
@@ -40,12 +45,12 @@
               <td class="round-table-data">Opportunity</<td>
             </tr>
             <tr>
-              <td class="bold-table-column"> Name </td>
-              <td class="round-table-data">salesforce.com - 1200 Widgets</td>
+              <td class="bold-table-column"> Account </td>
+              <td class="round-table-data"> Salesforce.com </td>
             </tr>
             <tr>
-              <td class="bold-table-column"> ID </td>
-              <td class="round-table-data"> 0061t0000050e48AAA </td>
+              <td class="bold-table-column"> Name </td>
+              <td class="round-table-data">salesforce.com - 1200 Widgets</td>
             </tr>
           </table>
         </div>
@@ -107,6 +112,14 @@
           </table>
         </div>
       </div>
+      <!-- AMOUNT OF CASES FOR FILTER INDICATOR -->
+      <div class="case-number-wrapper">
+        <div class="counter" data-count="150">
+          <h4>100</h4>
+          <p>Cases estimated for you analysis </p>
+        </div>
+      </div>
+
       <!-- buttons  -->
       <div class="button-panel">
         <button id="proceed-analysis-button" type="button" name="button"> Get insights </button>
@@ -115,7 +128,7 @@
     <!-- END 1st VIEW: START SCREEN  -->
 
     <!-- START 2ND VIEW: ANALYSIS SCREEN  -->
-    <div id="analysis-screen" class="panel-main ">
+    <div id="analysis-screen" class="panel-main content-block_invisible">
       <!-- MAIN CONTENT BLOCK -->
       <div class="panel-main__block">
         <!-- header top row with logo -->
@@ -128,48 +141,50 @@
         <div class="content-block white-box">
           <div class="icon-headline-block">
             <img src="/img/analysis.svg" class="icon-headline" alt="">
-            <h6> Analysis</h6>
+            <h6> Your Analysis</h6>
           </div>
-          <p class="amount-cases"> We found 31 comparable cases that were successfully closed! </p>
+          <p class="amount-cases"> We found 97 comparable cases that were successfully closed! </p>
         </div>
 
         <!---NEXT STEPS BOX--->
         <div id="content-block-process" class="content-block white-box">
           <div class="icon-headline-block">
             <img src="/img/tap.svg" class="icon-headline" alt="">
-            <h6> Next Steps</h6>
+            <h6> Select a Next Step</h6>
           </div>
-          <p class="amount-cases"> Based on our analysis, we suggest you the following actions as your next best steps. </p>
+          <p class="amount-cases"> Based on our analysis, we suggest you the following actions as your next best steps. Choose a option: </p>
           <!-- SUGGESTED NEXT STEPS -->
           <div id="next-steps-to-do-block" class="sub-content-block">
-            <!-- FIRST NEXT STEP -->
-            <div id="next-step-1" class="to-do-box">
-              <div class="checkbox-wrapper">
-                <input type="radio" name="next-step" value="next-step-1">
-              </div>
-              <div class="to-do-description">
-                <p class="next-steps-alternative-text"> Alternative 1</p>
-                <p> Calculate detailed business case </p>
-              </div>
-              <div class="to-do-metric">
-                <h4> 76%</h4>
-                <p class="metric-description"> of cases </p>
-              </div>
-            </div>
             <!-- SECOND NEXT STEP -->
             <div id="next-step-2" class="to-do-box">
               <div class="checkbox-wrapper">
                 <input type="radio" name="next-step" value="next-step-2">
               </div>
               <div class="to-do-description">
-                <p class="next-steps-alternative-text"> Alternative 2</p>
+                <p class="next-steps-alternative-text"> Alternative 1</p>
                 <p> Change key stakeholder </p>
               </div>
               <div class="to-do-metric">
-                <h4> 23%</h4>
+                <h4> 40%</h4>
                 <p class="metric-description"> of cases </p>
               </div>
             </div>
+
+            <!-- FIRST NEXT STEP -->
+            <div id="next-step-1" class="to-do-box">
+              <div class="checkbox-wrapper">
+                <input type="radio" name="next-step" value="next-step-1">
+              </div>
+              <div class="to-do-description">
+                <p class="next-steps-alternative-text"> Alternative 2</p>
+                <p> Calculate detailed business case </p>
+              </div>
+              <div class="to-do-metric">
+                <h4> 46%</h4>
+                <p class="metric-description"> of cases </p>
+              </div>
+            </div>
+
           </div>
         </div>
 
@@ -224,7 +239,7 @@
           </div>
           <div class="another-case-panel">
             <p> Didn't the resources you need? </p>
-            <a href="#"> Ask the an expert from your organization </a>
+            <a class="find-colleagues" href="#"> Ask the an expert from your organization </a>
           </div>
         </div>
 
@@ -250,6 +265,10 @@
                 <p class="metric-description"> downloads </p>
               </div>
             </div>
+          </div>
+          <div class="another-case-panel">
+            <p> Didn't the resources you need? </p>
+            <a class="find-colleagues" href="#"> Ask the an expert from your organization </a>
           </div>
         </div>
 
@@ -278,7 +297,7 @@
                 </span>
               </div>
               <div class="to-do-metric">
-                <h4> 18</h4>
+                <h4> 37</h4>
                 <p class="metric-description"> times </p>
                 <p class="metric-description"> done </p>
               </div>
@@ -286,10 +305,10 @@
             <!-- CONTACT 2 -->
             <div class="contact-box">
               <div class="colleague-image-wrapper">
-                <img src="img/colleague.jpg" class="colleague-foto" alt="">
+                <img src="img/colleague3.jpg" class="colleague-foto" alt="">
               </div>
               <div class="contact-description">
-                <p class="colleague-name"> Yasa Mama, Sales Executive </p>
+                <p class="colleague-name"> Matthis Proud, Sales Executive </p>
                 <span> <i class="fas fa-phone-volume"></i>
                   <p class="colleague-contact-details"> +49 0172 9293 012 </p>
                 </span>
@@ -298,7 +317,7 @@
                 </span>
               </div>
               <div class="to-do-metric">
-                <h4> 18</h4>
+                <h4> 24</h4>
                 <p class="metric-description"> times </p>
                 <p class="metric-description"> done </p>
               </div>
@@ -306,10 +325,10 @@
             <!-- CONTACT 3 -->
             <div class="contact-box">
               <div class="colleague-image-wrapper">
-                <img src="img/colleague.jpg" class="colleague-foto" alt="">
+                <img src="img/colleague2.jpg" class="colleague-foto" alt="">
               </div>
               <div class="contact-description">
-                <p class="colleague-name"> Yasa Mama, Sales Executive </p>
+                <p class="colleague-name"> Kaya Maya, Sales Executive </p>
                 <span> <i class="fas fa-phone-volume"></i>
                   <p class="colleague-contact-details"> +49 0172 9293 012 </p>
                 </span>
@@ -327,19 +346,51 @@
           </div>
 
         </div>
-
-        <div class="button-panel">
+        <!-- BUTTON PANEL FOR CALL TO ACTION BUTTON ADD TASK -->
+        <div id="cta-panel" class="button-panel content-block_invisible">
           <button id="create-task" class="" type="button" name="button"> Add task to SF</button>
-          <button id="find-colleagues" class="" type="button" name="button"> Find colleagues</button>
         </div>
+
+        <!-- ADD TASK TO SF BOX -->
+        <div id="add-task-form-box" class="content-block white-box  content-block_invisible">
+          <div class="icon-headline-block">
+            <img src="/img/analysis.svg" class="icon-headline" alt="">
+            <h6> Add Task to Salesforce</h6>
+          </div>
+          <div class="">
+            <form  class="task-form" action="" method="">
+              <table>
+                <tr>
+                  <td> Subject</td>
+                  <td><input type="text" name="" value="Calculate detailed business case"> </td>
+                </tr>
+                <tr>
+                  <td> Due Date</td>
+                  <td><input type="date" name="" value=""> </td>
+                </tr>
+                <tr>
+                  <td> Assigned to</td>
+                  <td><input type="text" name="" value="Patrick">  </td>
+                </tr>
+                <tr>
+                  <td> Related to</td>
+                  <td><input type="text" name="" value="salesforce.com - 1200 Widgets"> </td>
+                </tr>
+              </table>
+            </form>
+            <div class="button-panel">
+              <button id="add-task-button" type="button" name="button"> Add Task to Salesforce</button>
+            </div>
+          </div>
+
+        </div>
+
 
       </div>
     </div>
   </div>
 
   </div>
-
-  <script type="text/javascript" src="js/popup.js"></script>
 </body>
 <!---END BODY--->
 
