load screen added

--- a/Sally_Sales_Chrome/popup.html
+++ b/Sally_Sales_Chrome/popup.html
@@ -61,6 +61,7 @@
       </div>
 
       <!--- Filter opportunities for process explorer --->
+
       <div class="white-box">
         <div class="icon-headline-block">
           <img src="/img/filter.svg" class="icon-headline" alt="">
@@ -112,6 +113,7 @@
           </table>
         </div>
       </div>
+
       <!-- AMOUNT OF CASES FOR FILTER INDICATOR -->
       <div class="case-number-wrapper">
         <div class="counter" data-count="150">
@@ -126,6 +128,25 @@
       </div>
     </div>
     <!-- END 1st VIEW: START SCREEN  -->
+
+    <!-- LOAD SCREEN -->
+    <div id="load-screen" class="panel-main content-block_invisible">
+      <!-- big logo -->
+      <div class="logo-wrapper">
+        <img id="start-screen-logo" src="/img/logo-star.png" alt="">
+      </div>
+      <!-- claim of sally sales -->
+      <span id="slogan-span">
+        <p>Leverage your sales team's collective cleverness.</p>
+      </span>
+      <div class="load-animation-wrapper">
+        <img src="/img/load-screen.gif" alt="">
+        <h4> Your data is being analyzed. <br> Please be patient for a moment 🦊 </h4>
+      </div>
+
+
+    </div>
+
 
     <!-- START 2ND VIEW: ANALYSIS SCREEN  -->
     <div id="analysis-screen" class="panel-main content-block_invisible">
