bug fix cta button not displayed after 1 finished user flow

--- a/Sally_Sales_Chrome/popup.html
+++ b/Sally_Sales_Chrome/popup.html
@@ -55,7 +55,7 @@
           </table>
         </div>
         <div class="another-case-panel">
-          <p>Not the case you want to analyse?</p>
+          <p>Not the case you want to analyze?</p>
           <a href="#">Choose another case</a>
         </div>
       </div>
@@ -78,7 +78,7 @@
                     <option value="Manufacturing">Manufacturing</option>
                     <option value="Pharma">Pharma</option>
                     <option value="Biotechnology">Biotechnology</option>
-                    <option value="Entertainement">Entertainement</option>
+                    <option value="Entertainement">Entertainment</option>
                   </optgroup>
                 </select>
               </td>
@@ -141,8 +141,8 @@
       </span>
       <div class="load-animation-wrapper">
         <img src="/img/load-screen.gif" alt="">
-        <h4> Your data is being analyzed. <br> Please be patient for a moment 🦊 </h4>
       </div>
+      <h4 class="white-font"> Your data is being analyzed. <br> Please be patient for a moment 🦊 </h4>
 
 
     </div>
@@ -171,40 +171,40 @@
         <div id="content-block-process" class="content-block white-box">
           <div class="icon-headline-block">
             <img src="/img/tap.svg" class="icon-headline" alt="">
-            <h6> Select a Next Step</h6>
+            <h6> Select a next step</h6>
           </div>
           <p class="amount-cases"> Based on our analysis, we suggest you the following actions as your next best steps. Choose a option: </p>
           <!-- SUGGESTED NEXT STEPS -->
           <div id="next-steps-to-do-block" class="sub-content-block">
-            <!-- SECOND NEXT STEP -->
-            <div id="next-step-2" class="to-do-box">
-              <div class="checkbox-wrapper">
-                <input type="radio" name="next-step" value="next-step-2">
-              </div>
-              <div class="to-do-description">
-                <p class="next-steps-alternative-text"> Alternative 1</p>
-                <p> Change key stakeholder </p>
-              </div>
-              <div class="to-do-metric">
-                <h4> 40%</h4>
-                <p class="metric-description"> of cases </p>
-              </div>
-            </div>
-
             <!-- FIRST NEXT STEP -->
             <div id="next-step-1" class="to-do-box">
               <div class="checkbox-wrapper">
                 <input type="radio" name="next-step" value="next-step-1">
               </div>
               <div class="to-do-description">
-                <p class="next-steps-alternative-text"> Alternative 2</p>
+                <p class="next-steps-alternative-text"> Alternative 1</p>
                 <p> Calculate detailed business case </p>
               </div>
               <div class="to-do-metric">
-                <h4> 46%</h4>
+                <h4> 54%</h4>
                 <p class="metric-description"> of cases </p>
               </div>
             </div>
+            <!-- SECOND NEXT STEP -->
+            <div id="next-step-2" class="to-do-box">
+              <div class="checkbox-wrapper">
+                <input type="radio" name="next-step" value="next-step-2">
+              </div>
+              <div class="to-do-description">
+                <p class="next-steps-alternative-text"> Alternative 2</p>
+                <p> Change key stakeholder </p>
+              </div>
+              <div class="to-do-metric">
+                <h4> 33%</h4>
+                <p class="metric-description"> of cases </p>
+              </div>
+            </div>
+
 
           </div>
         </div>
@@ -213,7 +213,7 @@
         <div id="content-task-detail-1" class="content-block white-box content-block_invisible">
           <div class="icon-headline-block">
             <img src="/img/tap.svg" class="icon-headline" alt="">
-            <h6> Resources</h6>
+            <h6> Resources that might help you</h6>
           </div>
           <p class="amount-cases"> We found these resources which might support you.</p>
           <!-- HELPFUL RESOURCES Option 1-->
@@ -259,7 +259,7 @@
             </div>
           </div>
           <div class="another-case-panel">
-            <p> Didn't the resources you need? </p>
+            <p> Didn't find the resources you need? </p>
             <a class="find-colleagues" href="#"> Ask the an expert from your organization </a>
           </div>
         </div>
@@ -288,7 +288,7 @@
             </div>
           </div>
           <div class="another-case-panel">
-            <p> Didn't the resources you need? </p>
+            <p> Didn't find the resources you need? </p>
             <a class="find-colleagues" href="#"> Ask the an expert from your organization </a>
           </div>
         </div>
@@ -298,9 +298,9 @@
         <div id="content-block-colleague" class="content-block white-box content-block_invisible">
           <div class="icon-headline-block">
             <img src="/img/employee.svg" class="icon-headline" alt="">
-            <h6> Experts </h6>
+            <h6> Contact an Expert </h6>
           </div>
-          <p class="amount-cases"> Based on their experience,  those colleagues might be ablet to help you. </p>
+          <p class="amount-cases"> Based on their experience,  those colleagues might be able to help you. </p>
           <!-- CONTACT LIST OF COLLEAGUES -->
           <div class="contact-list">
             <!-- CONTACT 1 -->
@@ -334,7 +334,7 @@
                   <p class="colleague-contact-details"> +49 0172 9293 012 </p>
                 </span>
                 <span> <i class="fas fa-envelope"></i>
-                  <p class="colleague-contact-details"> yasa.mama@global-tech.com </p>
+                  <p class="colleague-contact-details"> matthis.proud@global-tech.com </p>
                 </span>
               </div>
               <div class="to-do-metric">
@@ -354,7 +354,7 @@
                   <p class="colleague-contact-details"> +49 0172 9293 012 </p>
                 </span>
                 <span> <i class="fas fa-envelope"></i>
-                  <p class="colleague-contact-details"> yasa.mama@global-tech.com </p>
+                  <p class="colleague-contact-details"> kaya.maya@global-tech.com </p>
                 </span>
               </div>
               <div class="to-do-metric">
