--- a/Sally_Sales_Chrome/popup.html
+++ b/Sally_Sales_Chrome/popup.html
@@ -142,9 +142,9 @@
         <p>Leverage your sales team's collective cleverness.</p>
       </span>
       <div class="load-animation-wrapper">
-        <img src="/img/load-screen.gif" alt="">
+        <img id="load-animation" src="/img/load-square.gif" alt="">
       </div>
-      <h4 class="white-font"> Let me check all closed deals in your company's <br> database to find your best next move </h4>
+      <h4 class="white-font"> Analyzing your database</h4>
     </div>
 
 
@@ -160,12 +160,11 @@
         </div>
 
         <!--- ANALYSIS--->
-        <div class="content-block box-wrapper">
-          <div class="box-content-block white-box">
-            <p class="amount-cases"> Congratulation! We found 65 comparable closed deals out of 4768 of in your organization! </p>
-          </div>
-
+        <div id="analysis-info-box">
+          <p class="amount-cases"> Congratulation! We found 65 comparable closed deals out of 4768 of in your organization! </p>
         </div>
+
+
 
         <!---NEXT STEPS BOX--->
         <div id="content-block-process" class="content-block box-wrapper">
@@ -175,7 +174,7 @@
           </div>
           <!-- SUGGESTED NEXT STEPS -->
           <div id="next-steps-to-do-block" class="white-box collapsible">
-            <p class="amount-cases"> Based on our analysis, we suggest you the following actions as your next best steps. Choose a option: </p>
+            <p class="amount-cases"> Choose one of the following moves to increase your chances to win.  </p>
             <!-- FIRST NEXT STEP -->
             <div id="next-step-1" class="to-do-box">
               <div class="checkbox-wrapper">
@@ -205,7 +204,7 @@
               </div>
             </div>
             <div class="button-panel">
-              <button id="to-ressources"class="long-button" type="button" name="button"> Find resources</button>
+              <button id="to-ressources"class="long-button" type="button" name="button"> Go to next section </button>
             </div>
           </div>
         </div>
@@ -214,7 +213,7 @@
         <div class="content-block box-wrapper">
           <div class="icon-headline-block white-box ">
             <img src="/img/tap.svg" class="icon-headline" alt="">
-            <h6> 2. Find winning documents </h6>
+            <h6> 2. Find the right documents </h6>
           </div>
           <!-- HELPFUL RESOURCES Option 1-->
           <div id="content-task-detail-1" class="white-box content-block_invisible collapsible">
@@ -264,7 +263,7 @@
               <p> Didn't find the resources you need? Ask an expert from your organization </p>
             </div>
             <div class="button-panel">
-              <button class="find-colleagues long-button" type="button" name="button"> Find an expert </button>
+              <button class="find-colleagues long-button" type="button" name="button"> Go to next section </button>
             </div>
           </div>
           <div id="content-task-detail-2" class="white-box collapsible">
@@ -289,7 +288,7 @@
               <p> Didn't find the resources you need? Ask an expert from your organization </p>
             </div>
             <div class="button-panel">
-              <button class="find-colleagues long-button" type="button" name="button"> Find an expert </button>
+              <button class="find-colleagues long-button" type="button" name="button"> Go to next section </button>
             </div>
           </div>
           </div>
@@ -300,7 +299,7 @@
         <div  class="content-block box-wrapper ">
           <div class="icon-headline-block white-box">
             <img src="/img/employee.svg" class="icon-headline" alt="">
-            <h6> 3. Find the right expert </h6>
+            <h6> 3. Ask the best experts </h6>
           </div>
           <div id="content-block-colleague" class="white-box content-block_invisible collapsible">
             <p class="amount-cases"> Based on their experience,  those colleagues might be able to help you. </p>
@@ -368,7 +367,7 @@
               </div>
             </div>
             <div id="" class="button-panel ">
-              <button id="create-task" class="long-button" type="button" name="button"> Create a task </button>
+              <button id="create-task" class="long-button" type="button" name="button"> Go to next section </button>
             </div>
 
           </div>
@@ -403,7 +402,7 @@
               </table>
             </form>
             <div class="button-panel">
-              <button class="long-button" id="add-task-button" type="button" name="button"> Add Task to Salesforce</button>
+              <button class="long-button" id="add-task-button" type="button" name="button"> Add Task to SF</button>
             </div>
           </div>
         </div>
