--- a/Sally_Sales_Chrome/popup.html
+++ b/Sally_Sales_Chrome/popup.html
@@ -170,8 +170,8 @@
         <!---NEXT STEPS BOX--->
         <div id="content-block-process" class="content-block box-wrapper">
           <div class="icon-headline-block white-box">
-            <img src="/img/tap.svg" class="icon-headline" alt="">
-            <h6> 1. Pick your winning move </h6>
+            <img src="/img/one.svg" class="icon-headline" alt="">
+            <h6> Pick your winning move </h6>
           </div>
           <!-- SUGGESTED NEXT STEPS -->
           <div id="next-steps-to-do-block" class="white-box collapsible">
@@ -213,8 +213,8 @@
         <!---TASK DETAIL BOX 1 --->
         <div class="content-block box-wrapper">
           <div class="icon-headline-block white-box ">
-            <img src="/img/tap.svg" class="icon-headline" alt="">
-            <h6> 2. Find winning documents </h6>
+            <img src="/img/two.svg" class="icon-headline" alt="">
+            <h6> Find winning documents </h6>
           </div>
           <!-- HELPFUL RESOURCES Option 1-->
           <div id="content-task-detail-1" class="white-box content-block_invisible collapsible">
@@ -226,7 +226,9 @@
                   <img class="file-icon" src="/img/excel.svg" alt="">
                 </div>
                 <div class="to-do-description">
+                  <a href="/images/myw3schoolsimage.jpg" download="w3logo">
                   <a class="file-name"> Busisness-Case-Template.xls </a>
+
                 </div>
                 <div class="to-do-metric">
                   <h4> 799</h4>
@@ -299,8 +301,8 @@
         <!-- FIND A COLLEAGUE add content-block_invisible to add-->
         <div  class="content-block box-wrapper ">
           <div class="icon-headline-block white-box">
-            <img src="/img/employee.svg" class="icon-headline" alt="">
-            <h6> 3. Find the right expert </h6>
+            <img src="/img/three.svg" class="icon-headline" alt="">
+            <h6> Find the right expert </h6>
           </div>
           <div id="content-block-colleague" class="white-box content-block_invisible collapsible">
             <p class="amount-cases"> Based on their experience,  those colleagues might be able to help you. </p>
@@ -378,8 +380,8 @@
         <!-- ADD TASK TO SF BOX -->
         <div  class="content-block box-wrapper">
           <div class="icon-headline-block white-box">
-            <img src="/img/analysis.svg" class="icon-headline" alt="">
-            <h6> 4. Add move to Salesforce</h6>
+            <img src="/img/four.svg" class="icon-headline" alt="">
+            <h6> Add move to Salesforce</h6>
           </div>
           <div id="add-task-form-box" class="white-box content-block_invisible collapsible">
             <form  class="task-form" action="" method="">
