--- a/Sally_Sales_Chrome/popup.html
+++ b/Sally_Sales_Chrome/popup.html
@@ -212,13 +212,9 @@
         <!---TASK DETAIL BOX 1 --->
         <div class="content-block box-wrapper">
           <div class="icon-headline-block white-box ">
-<<<<<<< HEAD
             <img src="/img/two.svg" class="icon-headline" alt="">
-            <h6> Find winning documents </h6>
-=======
-            <img src="/img/tap.svg" class="icon-headline" alt="">
-            <h6> 2. Find the right documents </h6>
->>>>>>> 0d45134f80793c4f5885aae0f549d51bc7d01c39
+            <h6> Find the right documents </h6>
+            <!--<img src="/img/tap.svg" class="icon-headline" alt="">-->
           </div>
           <!-- HELPFUL RESOURCES Option 1-->
           <div id="content-task-detail-1" class="white-box content-block_invisible collapsible">
@@ -305,13 +301,9 @@
         <!-- FIND A COLLEAGUE add content-block_invisible to add-->
         <div  class="content-block box-wrapper ">
           <div class="icon-headline-block white-box">
-<<<<<<< HEAD
             <img src="/img/three.svg" class="icon-headline" alt="">
-            <h6> Find the right expert </h6>
-=======
-            <img src="/img/employee.svg" class="icon-headline" alt="">
-            <h6> 3. Ask the best experts </h6>
->>>>>>> 0d45134f80793c4f5885aae0f549d51bc7d01c39
+            <h6> Ask the best experts </h6>
+            <!--<img src="/img/employee.svg" class="icon-headline" alt="">-->
           </div>
           <div id="content-block-colleague" class="white-box content-block_invisible collapsible">
             <p class="amount-cases"> Based on their experience,  those colleagues might be able to help you. </p>
