--- a/Sally_Sales_Chrome/popup.html
+++ b/Sally_Sales_Chrome/popup.html
@@ -119,7 +119,7 @@
       <!-- AMOUNT OF CASES FOR FILTER INDICATOR -->
       <div class="case-number-wrapper">
         <div class="counter" data-count="150">
-          <h4>100</h4>
+          <h4>70</h4>
           <p>Cases estimated for you analysis </p>
         </div>
       </div>
@@ -182,7 +182,7 @@
               </div>
               <div class="to-do-description">
                 <p class="next-steps-alternative-text"> Alternative 1</p>
-                <p> Calculate detailed business case </p>
+                <p> Calculate detailed business case  <i class="info-circle fas fa-info-circle"></i> </p>
               </div>
               <div class="to-do-metric">
                 <h4> 54%</h4>
@@ -196,7 +196,7 @@
               </div>
               <div class="to-do-description">
                 <p class="next-steps-alternative-text"> Alternative 2</p>
-                <p> Change key stakeholder </p>
+                <p> Change key stakeholder <i class="info-circle fas fa-info-circle"></i> </p>
               </div>
               <div class="to-do-metric">
                 <h4> 33%</h4>
@@ -254,7 +254,7 @@
                   <img class="file-icon" src="/img/outlook.svg" alt="">
                 </div>
                 <div class="to-do-description">
-                  <a class="file-name"> email-template-business-case.oft </a>
+                  <a class="file-name"> Email-template-business-case.oft </a>
                 </div>
                 <div class="to-do-metric">
                   <h4> 928</h4>
