--- a/Sally_Sales_Chrome/popup.html
+++ b/Sally_Sales_Chrome/popup.html
@@ -159,12 +159,21 @@
           <img src="/img/home.svg" alt="home" height="">
         </div>
 
-        <!--- ANALYSIS--->
+        <!--- ANALYSIS
         <div id="analysis-info-box">
           <p class="amount-cases"> Congratulation! We found 65 comparable closed deals out of 4768 of in your organization! </p>
         </div>
+        --->
 
-
+        <!---SALLY SALES COMPANION 1 --->
+        <div id="sally1" class="sally-assistant-wrapper">
+          <div class="speech-bubble">
+            <p class=""> Congratulation! I found 65 comparable closed deals out of 4768 of in your organization! </p>
+          </div>
+          <div class="sally-image">
+            <img src="/img/sally-fox.png" alt="">
+          </div>
+        </div>
 
         <!---NEXT STEPS BOX--->
         <div id="content-block-process" class="content-block box-wrapper">
@@ -206,6 +215,16 @@
             <div class="button-panel">
               <button id="to-ressources"class="long-button" type="button" name="button"> Go to next section </button>
             </div>
+          </div>
+        </div>
+
+        <!-- Sally Sales Companion 2 -->
+        <div id="sally2" class="sally-assistant-wrapper content-block_invisible">
+          <div class="speech-bubble">
+            <p class=""> I also found some documents in your CRM that might be helpful for your next step. </p>
+          </div>
+          <div class="sally-image">
+            <img src="/img/sally-fox.png" alt="">
           </div>
         </div>
 
@@ -297,7 +316,15 @@
           </div>
         </div>
 
-
+        <!-- Sally Sales Companion 3 -->
+        <div id="sally3" class="sally-assistant-wrapper content-block_invisible">
+          <div class="speech-bubble">
+            <p class=""> I also found some documents in your CRM that might be helpful for your next step. </p>
+          </div>
+          <div class="sally-image">
+            <img src="/img/sally-fox.png" alt="">
+          </div>
+        </div>
         <!-- FIND A COLLEAGUE add content-block_invisible to add-->
         <div  class="content-block box-wrapper ">
           <div class="icon-headline-block white-box">
@@ -377,6 +404,15 @@
           </div>
         </div>
 
+        <!-- Sally Sales Companion 4 -->
+        <div id="sally4" class="sally-assistant-wrapper content-block_invisible">
+          <div class="speech-bubble">
+            <p class=""> I also found some documents in your CRM that might be helpful for your next step. </p>
+          </div>
+          <div class="sally-image">
+            <img src="/img/sally-fox.png" alt="">
+          </div>
+        </div>
 
         <!-- ADD TASK TO SF BOX -->
         <div  class="content-block box-wrapper">
