--- a/Sally_Sales_Chrome/popup.html
+++ b/Sally_Sales_Chrome/popup.html
@@ -245,8 +245,10 @@
                   <img class="file-icon" src="/img/excel.svg" alt="">
                 </div>
                 <div class="to-do-description">
-                  <a href="/images/myw3schoolsimage.jpg" download="w3logo">
                   <a class="file-name"> Busisness-Case-Template.xls </a>
+                  <a href="/files/Questions.pdf" target="_blank" download>
+                    <img src="/img/download-interface-symbol-of-down-arrow-on-a-tray.svg" class="icon-download" alt="">
+                  </a>
 
                 </div>
                 <div class="to-do-metric">
@@ -261,6 +263,9 @@
                 </div>
                 <div class="to-do-description">
                   <a class="file-name"> Busisness-Case-Pitch-Deck.ppt </a>
+                  <a href="/files/Questions.pdf" target="_blank" download>
+                    <img src="/img/download-interface-symbol-of-down-arrow-on-a-tray.svg" class="icon-download" alt="">
+                  </a>
                 </div>
                 <div class="to-do-metric">
                   <h4> 555</h4>
@@ -274,6 +279,9 @@
                 </div>
                 <div class="to-do-description">
                   <a class="file-name"> Email-template-business-case.oft </a>
+                  <a href="/files/Questions.pdf" target="_blank" download>
+                    <img src="/img/download-interface-symbol-of-down-arrow-on-a-tray.svg" class="icon-download" alt="">
+                  </a>
                 </div>
                 <div class="to-do-metric">
                   <h4> 928</h4>
@@ -299,6 +307,9 @@
                 </div>
                 <div class="to-do-description">
                   <a class="file-name"> Orgchart-manufacturing-industry.pdf </a>
+                  <a href="/files/Questions.pdf" target="_blank" download>
+                    <img src="/img/download-interface-symbol-of-down-arrow-on-a-tray.svg" class="icon-download" alt="">
+                  </a>
                 </div>
                 <div class="to-do-metric">
                   <h4> 273</h4>
@@ -339,15 +350,15 @@
               <!-- CONTACT 1 -->
               <div class="contact-box">
                 <div class="colleague-image-wrapper">
-                  <img src="img/colleague.jpg" class="colleague-foto" alt="">
+                  <img src="img/colleague2.jpeg" class="colleague-foto" alt="">
                 </div>
                 <div class="contact-description">
-                  <p class="colleague-name"> Yasa Mama, Sales Executive </p>
+                  <p class="colleague-name"> Jordan Belfort, Sales Executive </p>
                   <span> <i class="fas fa-phone-volume"></i>
-                    <p id="call-action" class="colleague-contact-details"> +49 0172 9293 012 </p>
+                    <p id="call-action" class="colleague-contact-details"> +41 147 7846455 </p>
                   </span>
                   <span> <i class="fas fa-envelope"></i>
-                    <p id="mail-action" class="colleague-contact-details"> yasa.mama@global-tech.com </p>
+                    <p id="mail-action" class="colleague-contact-details"> jordan.belfort@wolf.com </p>
                   </span>
                 </div>
                 <div class="to-do-metric">
@@ -359,15 +370,15 @@
               <!-- CONTACT 2 -->
               <div class="contact-box">
                 <div class="colleague-image-wrapper">
-                  <img src="img/colleague3.jpg" class="colleague-foto" alt="">
+                  <img src="img/colleague.jpeg" class="colleague-foto" alt="">
                 </div>
                 <div class="contact-description">
-                  <p class="colleague-name"> Matthis Proud, Sales Executive </p>
+                  <p class="colleague-name"> Donnie Azoff, Sales Executive </p>
                   <span> <i class="fas fa-phone-volume"></i>
-                    <p class="colleague-contact-details"> +49 0172 9293 012 </p>
+                    <p class="colleague-contact-details"> +1 170 8351937 </p>
                   </span>
                   <span> <i class="fas fa-envelope"></i>
-                    <p class="colleague-contact-details"> matthis.proud@global-tech.com </p>
+                    <p class="colleague-contact-details"> donnie.azoff@wolf.com </p>
                   </span>
                 </div>
                 <div class="to-do-metric">
@@ -379,15 +390,15 @@
               <!-- CONTACT 3 -->
               <div class="contact-box">
                 <div class="colleague-image-wrapper">
-                  <img src="img/colleague2.jpg" class="colleague-foto" alt="">
+                  <img src="img/colleague3.jpeg" class="colleague-foto" alt="">
                 </div>
                 <div class="contact-description">
-                  <p class="colleague-name"> Kaya Maya, Sales Executive </p>
+                  <p class="colleague-name"> Mark Hanna, Sales Executive </p>
                   <span> <i class="fas fa-phone-volume"></i>
-                    <p class="colleague-contact-details"> +49 0172 9293 012 </p>
+                    <p class="colleague-contact-details"> +1 159 0917902 </p>
                   </span>
                   <span> <i class="fas fa-envelope"></i>
-                    <p class="colleague-contact-details"> kaya.maya@global-tech.com </p>
+                    <p class="colleague-contact-details"> mark.hanna@wolf.com </p>
                   </span>
                 </div>
                 <div class="to-do-metric">
