typo fix start page

--- a/Sally_Sales_Chrome/popup.html
+++ b/Sally_Sales_Chrome/popup.html
@@ -120,7 +120,7 @@
       <div class="case-number-wrapper">
         <div class="counter" data-count="150">
           <h4>70</h4>
-          <p>Cases estimated for you analysis </p>
+          <p>comparable cases estimated for your analysis </p>
         </div>
       </div>
 
