--- a/Sally_Sales_Chrome/popup.html
+++ b/Sally_Sales_Chrome/popup.html
@@ -167,12 +167,13 @@
 
         <!---SALLY SALES COMPANION 1 --->
         <div id="sally1" class="sally-assistant-wrapper">
-          <div class="speech-bubble">
-            <p class=""> Congratulation! I found 65 comparable closed deals out of 4768 of in your organization! </p>
-          </div>
           <div class="sally-image">
-            <img src="/img/sally-fox.png" alt="">
+            <img src="/img/sally-circle.png" alt="">
           </div>
+          <div class="speech-bubble">
+            <p class=""> Congratulation! I found 65 comparable closed deals out of 4768 in your organization! </p>
+          </div>
+
         </div>
 
         <!---NEXT STEPS BOX--->
@@ -220,11 +221,11 @@
 
         <!-- Sally Sales Companion 2 -->
         <div id="sally2" class="sally-assistant-wrapper content-block_invisible">
+          <div class="sally-image">
+            <img src="/img/sally-circle.png" alt="">
+          </div>
           <div class="speech-bubble">
             <p class=""> I also found some documents in your CRM that might be helpful for your next step. </p>
-          </div>
-          <div class="sally-image">
-            <img src="/img/sally-fox.png" alt="">
           </div>
         </div>
 
@@ -246,7 +247,7 @@
                 </div>
                 <div class="to-do-description">
                   <a class="file-name"> Busisness-Case-Template.xls </a>
-                  <a href="/files/Questions.pdf" target="_blank" download>
+                  <a href="/files/Busisness-Case-Template.pdf" target="_blank" download>
                     <img src="/img/download-interface-symbol-of-down-arrow-on-a-tray.svg" class="icon-download" alt="">
                   </a>
 
@@ -329,13 +330,14 @@
 
         <!-- Sally Sales Companion 3 -->
         <div id="sally3" class="sally-assistant-wrapper content-block_invisible">
-          <div class="speech-bubble">
-            <p class=""> I also found some documents in your CRM that might be helpful for your next step. </p>
-          </div>
           <div class="sally-image">
-            <img src="/img/sally-fox.png" alt="">
+            <img src="/img/sally-circle.png" alt="">
+          </div>
+          <div class="speech-bubble">
+            <p class=""> Still have any questions? Sometimes asking an experienced colleague is also very valuable. </p>
           </div>
         </div>
+
         <!-- FIND A COLLEAGUE add content-block_invisible to add-->
         <div  class="content-block box-wrapper ">
           <div class="icon-headline-block white-box">
@@ -417,11 +419,11 @@
 
         <!-- Sally Sales Companion 4 -->
         <div id="sally4" class="sally-assistant-wrapper content-block_invisible">
-          <div class="speech-bubble">
-            <p class=""> I also found some documents in your CRM that might be helpful for your next step. </p>
-          </div>
           <div class="sally-image">
-            <img src="/img/sally-fox.png" alt="">
+            <img src="/img/sally-circle.png" alt="">
+          </div>
+          <div class="speech-bubble">
+            <p class=""> Want to add your next move to your to-do list? I'll help you to directly add it to Salesforce. </p>
           </div>
         </div>
 
